--- a/landingPage.html
+++ b/landingPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,11 +17,10 @@
 
     <div class="header">
       <nav class="navbar">
-        <Link id="red"  to="/" title="Home">HOME</Link> 
-        <Link id="oarange" className="link dim orange dib pa3"  to="/works" title="Works">Things-I-Did (Portfolio)</Link>
-        <Link id="yellow" className="link dim yellow dib pa3"  to="/contact" title="Contact">Contact</Link>
-        <Link id="blue" className="link dim dark-pink dib pa3"  to="/cv" title="CV">very_short_cv</Link>
-
+        <li><a href="/home">Home</a></li>
+        <li><a href="/thing-i-did">Things-I-Did</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/very-short-cv">very_short_cv</a></li>
 
 
 
