--- a/landingPage.html
+++ b/landingPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>xxx</title>
   </head>
@@ -17,14 +17,13 @@
 
     <div class="header">
       <nav class="navbar">
-        <li><a href="/home">Home</a></li>
-        <li><a href="/thing-i-did">Things-I-Did</a></li>
-        <li><a href="/contact">Contact</a></li>
-        <li><a href="/very-short-cv">very_short_cv</a></li>
-
-
-
+        <li><a  class="blue" href="/home">Home</a></li>
+        <li><a  class="orange" href="/about">about</a></li>
+        <li><a class="pink" href="/thing-i-did">Things-I-Did</a></li>
+        <li><a class="yellow" href="/very-short-cv">very_short_cv</a></li>
       </nav>
+
+
     </div>
 
 
