--- a/Pages/landingPage.html
+++ b/Pages/landingPage.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/webProgramming/css/main.css">
     <title>xxx</title>
   </head>
 
@@ -14,10 +14,10 @@
   <body >
     <div class="header">
       <nav class="navbar">
-        <li><a  class="blue" href="/home">Home</a></li>
-        <li><a  class="orange" href="/about">about</a></li>
-        <li><a  class="yellow" href="/thing-i-did">Things-I-Did</a></li>
-        <li><a class="pink" href="/very-short-cv">very_short_cv</a></li>
+        <li><a  class="blue" href="landingPage.html">Home</a></li>
+        <li><a  class="orange" href="story.html">story</a></li>
+        <li><a  class="yellow" href="things-i-did.html">Things-I-Did</a></li>
+        <li><a class="pink" href="very-short-cv.html">very_short_cv</a></li>
       </nav>
     </div>
 
@@ -41,7 +41,7 @@
     </div>
 
     <div class ="qrcode">
-      <img src="QR.png"> 
+      <img src="/webProgramming/QR.png"> 
     </div>
   </div>
       
