Changes to be committed: 	modified:   Pages/landingPage.html 	modified:   Pages/story.html 	modified:   Pages/things-i-did.html 	modified:   Pages/very-short-cv.html 	modified:   css/bubbleSpeech.css 	modified:   css/footer.css
Fixed file references and scaling for footer.

--- a/Pages/landingPage.html
+++ b/Pages/landingPage.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <link rel="stylesheet" href="/webProgramming/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>xxx</title>
   </head>
 
@@ -41,7 +41,7 @@
     </div>
 
     <div class ="qrcode">
-      <img src="/webProgramming/QR.png"> 
+      <img src="../QR.png"> 
     </div>
   </div>
       
