--- a/Pages/story.html
+++ b/Pages/story.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
-    <link rel="stylesheet" href="/webProgramming/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>xxx</title>
   </head>
 
@@ -25,7 +25,7 @@
     <div class="messages">
       <div class="message message-left">
         <div class="message-container">
-          <img class='avatar'src='/webProgramming/avatar.png'>
+          <img class='avatar'src='../avatar.png'>
           <div class="balloon balloon-left">
             <p>xxxxxxxxxxxxxxxxxxxxxx</p>
 
@@ -38,7 +38,7 @@
           <div class="balloon balloon-right">
             <p>aaaaaaaaaaaaaaaaaaaaaa</p>
           </div>
-          <img class='avatar'src='/webProgramming/avatar.png'>
+          <img class='avatar'src='../avatar.png'>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
     <div class="messages">
       <div class="message message-left">
         <div class="message-container">
-          <img class='avatar'src='/webProgramming/avatar.png'>
+          <img class='avatar'src='../avatar.png'>
           <div class="balloon balloon-left">
             <p>xxxxxxxxxxxxxxxxxxxxxx</p>
           </div>
@@ -60,7 +60,7 @@
           <div class="balloon balloon-right">
             <p>aaaaaaaaaaaaaaaaaaaaaa</p>
           </div>
-          <img class='avatar'src='/webProgramming/avatar.png'>
+          <img class='avatar'src='../avatar.png'>
         </div>
       </div>
     </div>
