--- a/Pages/very-short-cv.html
+++ b/Pages/very-short-cv.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
-    <link rel="stylesheet" href="/webProgramming/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>xxx</title>
   </head>
 
