--- a/Pages/story.html
+++ b/Pages/story.html
@@ -25,7 +25,7 @@
     <div class="messages">
       <div class="message message-left">
         <div class="message-container">
-          <img class='avatar'src='../avatar.png'>
+          <img class='avatar'src='../images/avatar.png'>
           <div class="balloon balloon-left">
             <p>xxxxxxxxxxxxxxxxxxxxxx</p>
 
@@ -38,7 +38,7 @@
           <div class="balloon balloon-right">
             <p>aaaaaaaaaaaaaaaaaaaaaa</p>
           </div>
-          <img class='avatar'src='../avatar.png'>
+          <img class='avatar'src='../images/avatar.png'>
         </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
     <div class="messages">
       <div class="message message-left">
         <div class="message-container">
-          <img class='avatar'src='../avatar.png'>
+          <img class='avatar'src='../images/avatar.png'>
           <div class="balloon balloon-left">
             <p>xxxxxxxxxxxxxxxxxxxxxx</p>
           </div>
@@ -60,7 +60,7 @@
           <div class="balloon balloon-right">
             <p>aaaaaaaaaaaaaaaaaaaaaa</p>
           </div>
-          <img class='avatar'src='../avatar.png'>
+          <img class='avatar'src='../images/avatar.png'>
         </div>
       </div>
     </div>
