--- a/Pages/things-i-did.html
+++ b/Pages/things-i-did.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <script src="/./webProgramming/js/projectList.js"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -23,16 +24,14 @@
       </nav>
     </div>
 
-    <div class="sc">
-    <input type="search" placeholder="Filter By Title" onchange=searchChange>  
+    <div class="search-container">
+    <input type="search" placeholder="Filter By Title" data-search/>  
     </div>
 
+   
+      <div class="card-section"></div>
     
-
-      <div class="best">
-
-     </div>
-
+  
 
      <div class="fo">
       <footer class="fo-items">
