--- a/Pages/things-i-did.html
+++ b/Pages/things-i-did.html
@@ -25,11 +25,10 @@
     </div>
 
     <div class="search-container">
-    <input type="search" placeholder="Filter By Title" data-search/>  
+    <input id="searchInput" type="text" placeholder="Filter By Title"/>  
     </div>
 
-   
-      <div class="card-section"></div>
+      <div class="card-section"> </div>
     
   
 
@@ -60,4 +59,6 @@
     
   </body>
   <script src="../js/dynamicCards.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../js/dataSearch.js"></script>
+
   </html>
