--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://emirongrr.github.io/webProgramming/Pages/landingPage.html" />
+<meta http-equiv="refresh" content="0; url=https://github.com/emirongrr/webProgramming/blob/main/Pages/landingPage.html" />
