fix-card-visibility

--- a/Pages/landingPage.html
+++ b/Pages/landingPage.html
@@ -34,9 +34,8 @@
     
   <div class="qrcode-card">
     <div class="form">
-      <p class="pstart">FUNDS MY WORKS</p>
+      <p class="pstart">FUND MY WORKS</p>
     </div>
-
     <div class ="qrcode">
       <img src="../QR.png"> 
     </div>
