--- a/Pages/things-i-did.html
+++ b/Pages/things-i-did.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <script src="/./webProgramming/js/projectList.js"></script>
+    <script src="../js/projectList.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -75,8 +75,9 @@
     
   </body>
   <script src="../js/dynamicCards.js" type="text/javascript" charset="utf-8"></script>
-  <script src="../js/dataSearch.js"></script>
   <script src="../js/filterCards.js"></script>
+  <script src="../js/dataSearch.js"></script>
+
 
   
 
