--- a/Pages/very-short-cv.html
+++ b/Pages/very-short-cv.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
     <link rel="stylesheet" href="../css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
+
     <title>xxx</title>
   </head>
 
 
   <body >
+
     <div class="header">
       <nav class="navbar">
         <li><a  class="blue" href="landingPage.html">Home</a></li>
@@ -21,7 +23,13 @@
       </nav>
     </div>
 
+    <div class="pixelized-container">
 
+      <p class="title">Knowgledge</p>
+
+
+    </div>
+    
     
 
   </body>
