add-subscription-form

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Press Start 2P' rel='stylesheet'>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=VT323" />
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <link rel="icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="../css/main.css">
   <title>Emir Öngörür</title>
 </head>
@@ -32,6 +33,9 @@
       <span id="typed-contact"></span>
 
     </pre>
+    <div class=link>
+      <a id="r1" href="mailto:emirongrr@gmail.com">Send a mail to emirongrr@gmail.com</a>
+    </div>
   </main>
 
 
@@ -104,7 +108,8 @@
       >>>  
 
             
-      SH C:\win32> <a href="mailto:emirongrr@gmail.com">Send a mail to emirongrr@gmail.com</a>  <span id="blink">_</span>
+      SH C:\win32>   <span id="blink">_</span>
+  
     `;
 
 
@@ -116,6 +121,8 @@
 
   });
 
+
 </script>
+<script src="../js/rainbow-text.js"></script>
 
 </html>
